Modificando el archivo logrotate.conf que tenia un error

--- a/config_odoo/logrotate.conf
+++ b/config_odoo/logrotate.conf
@@ -10,5 +10,5 @@
     postrotate
         # Recargar Odoo después de rotar
         # Ete comando envia una señal para que Odoo reabra los archivos log
-    endscrit
+    endscript
 }
